--- a/androidApp/module.yaml
+++ b/androidApp/module.yaml
@@ -4,6 +4,7 @@ dependencies:
   - ../shared
   - $libs.androidx.compose.ui.tooling.preview
   - $libs.androidx.activity.compose
+  - $libs.ktor.client.okhttp
 
 settings: 
   compose: enabled
