--- a/shared/module.yaml
+++ b/shared/module.yaml
@@ -1,26 +1,27 @@
-product: 
+product:
   type: lib
   platforms: [jvm, android, iosArm64, iosSimulatorArm64, iosX64]
 
-dependencies: 
+settings:
+  compose: enabled
+  kotlin:
+    serialization: json
+
+dependencies:
   - $compose.runtime
   - $compose.foundation
   - $compose.material
   - $libs.ktor.client.core
   - $libs.ktor.client.content.negotiation
   - $libs.ktor.serialization.kotlinx.json
-  - $libs.kamel
-  - $libs.koin.core
-  - $libs.voyager.navigator
-  - $libs.voyager.koin
+  - $libs.kotlinx.datetime
+  - io.insert-koin:koin-core:3.5.3
+  - cafe.adriel.voyager:voyager-navigator:1.0.0
+  - cafe.adriel.voyager:voyager-koin:1.0.0
+  - media.kamel:kamel-image:0.9.1
 
 dependencies@android:
   - $libs.ktor.client.okhttp
 
 dependencies@ios:
   - $libs.ktor.client.darwin
-
-settings: 
-  compose: enabled
-  kotlin:
-    serialization: json
