--- a/data/networking/module.yaml
+++ b/data/networking/module.yaml
@@ -3,19 +3,10 @@ product:
   platforms: [jvm, android, iosArm64, iosSimulatorArm64, iosX64]
 
 dependencies: 
-  - $compose.runtime
-  - $compose.foundation
-  - $compose.material
   - $libs.ktor.client.core
   - $libs.ktor.client.content.negotiation
   - $libs.ktor.serialization.kotlinx.json
-  - $libs.kamel
-  - $libs.koin.core
-  - $libs.voyager.navigator
-  - $libs.voyager.koin
-  - ../data/repository
-#  - ../features/detail
-#  - ../features/list
+  - ../model
 
 dependencies@android:
   - $libs.ktor.client.okhttp
@@ -24,6 +15,5 @@ dependencies@ios:
   - $libs.ktor.client.darwin
 
 settings: 
-  compose: enabled
   kotlin:
     serialization: json
