--- a/features/common/module.yaml
+++ b/features/common/module.yaml
@@ -13,9 +13,7 @@ dependencies:
   - $libs.koin.core
   - $libs.voyager.navigator
   - $libs.voyager.koin
-  - ../data/repository
-  - ../features/detail
-  - ../features/list
+  - ../../data/repository
 
 dependencies@android:
   - $libs.ktor.client.okhttp
