--- a/apps/shared/module.yaml
+++ b/apps/shared/module.yaml
@@ -13,9 +13,9 @@ dependencies:
   - $libs.koin.core
   - $libs.voyager.navigator
   - $libs.voyager.koin
-  - ../data/repository
-  - ../features/detail
-  - ../features/list
+  - ../../data/repository
+  - ../../features/detail
+  - ../../features/list
 
 dependencies@android:
   - $libs.ktor.client.okhttp
