--- a/data/repository/module.yaml
+++ b/data/repository/module.yaml
@@ -5,5 +5,5 @@ product:
 dependencies: 
   - ../model: exported
   - ../storage: exported
-  - ../networking: exported
+  - ../network: exported
   - org.jetbrains.kotlinx:kotlinx-coroutines-core:1.8.0
