--- a/data/repository/module.yaml
+++ b/data/repository/module.yaml
@@ -1,9 +1,9 @@
-product: 
+product:
   type: lib
   platforms: [jvm, android, iosArm64, iosSimulatorArm64, iosX64]
 
 dependencies: 
+  - $libs.kotlinx.coroutines.core
   - ../model: exported
   - ../storage: exported
   - ../network: exported
-  - org.jetbrains.kotlinx:kotlinx-coroutines-core:1.8.0
