--- a/data/storage/module.yaml
+++ b/data/storage/module.yaml
@@ -3,5 +3,5 @@ product:
   platforms: [jvm, android, iosArm64, iosSimulatorArm64, iosX64]
 
 dependencies:
+  - $libs.kotlinx.coroutines.core
   - ../model
-  - org.jetbrains.kotlinx:kotlinx-coroutines-core:1.8.0
