--- a/features/list/module.yaml
+++ b/features/list/module.yaml
@@ -3,7 +3,7 @@ product:
   platforms: [jvm, android, iosArm64, iosSimulatorArm64, iosX64]
 
 apply:
-  - ../ui-feature-template.yaml
+  - ../ui.module-template.yaml
 
 dependencies:
   - ../../data/repository
