--- a/shared/module.yaml
+++ b/shared/module.yaml
@@ -14,7 +14,7 @@ dependencies:
     - $libs.ktor.client.core
     - $libs.ktor.client.content.negotiation
     - $libs.ktor.serialization.kotlinx.json
-    - io.insert-koin:koin-core:3.5.3
+    - $libs.koin.core
     - cafe.adriel.voyager:voyager-navigator:1.0.0
     - cafe.adriel.voyager:voyager-koin:1.0.0
     - media.kamel:kamel-image:0.9.1
