--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,6 +9,7 @@ koin-compose = "1.2.0-Beta4"
 kotlin = "1.9.23"
 ktor = "2.3.10"
 navigationCompose = "2.7.0-alpha06"
+requirektx = "2.0.0-alpha02"
 
 [libraries]
 androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "androidx-activityCompose" }
@@ -23,6 +24,7 @@ ktor-client-darwin = { module = "io.ktor:ktor-client-darwin", version.ref = "kto
 ktor-client-okhttp = { module = "io.ktor:ktor-client-okhttp", version.ref = "ktor" }
 ktor-serialization-kotlinx-json = { module = "io.ktor:ktor-serialization-kotlinx-json", version.ref = "ktor" }
 navigation-compose = { module = "org.jetbrains.androidx.navigation:navigation-compose", version.ref = "navigationCompose" }
+requirektx-navigation = { module = "co.zsmb:requirektx-navigation", version.ref = "requirektx" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
